Added in remaining segment values. Extended script  functionality for the split segment. Fixed some bugs.

--- a/index.html
+++ b/index.html
@@ -17,76 +17,79 @@
 			</div>
 		<div id="wheelContainer" class="wheelContainer">
 			<div id="s1" class="seg seg--wheelSeg1 wText">
-				<h2>8<br>0<br>0</h2>	
+				<h2>$<br>8<br>0<br>0</h2>	
 			</div>
 			<div id="s2" class="seg seg--wheelSeg2 wText">
-				<h2>7<br>0<br>0</h2>
+				<h2>$<br>7<br>0<br>0</h2>
 			</div>
 			<div id="s3" class="seg seg--wheelSeg3 wText">
-				<h2>5<br>5<br>0</h2>
+				<h2>$<br>5<br>5<br>0</h2>
 			</div>
 			<div id="s4" class="seg seg--wheelSeg4 wText">
-				<h2>7<br>5<br>0</h2>
+				<h2>$<br>7<br>5<br>0</h2>
 			</div>
 			<div id="s5" class="seg seg--wheelSeg5 wText">
-				<h2>6<br>0<br>0</h2>
+				<h2>$<br>6<br>0<br>0</h2>
 			</div>
 			<div id="s6" class="seg seg--wheelSeg6 wText">
 				<p>B<br>a<br>n<br>k<br>r<br>u<br>p<br>t</p>
 			</div>
 			<div id="s7" class="seg seg--wheelSeg7 wText">
-				<h2>9<br>0<br>0</h2>
+				<h2>$<br>9<br>0<br>0</h2>
 			</div>
 			<div id="s8" class="seg seg--wheelSeg8 wText">
 				<p>L<br>o<br>s<br>e<br>T<br>u<br>r<br>n</p>
 			</div>
 			<div id="s9" class="seg seg--wheelSeg9 wText">
-				<h2>9<br>8<br>0<br>0</h2>
+				<h2>$<br>8<br>0<br>0</h2>
 			</div>
 			<div id="s10" class="seg seg--wheelSeg10 wText">
-				<h2>10<br>8<br>0<br>0</h2>
+				<p>B . $ . B<br>a . 1 . a<br>n . 0 . n<br>k  . 0 . k<br>r . 0 . r<br>u 0 u<br>p 0 p<br>t 0 t</p>
+			</div>
+			<div id="10.5" class="seg seg--wheelSeg105">
+				
 			</div>
 			<div id="s11" class="seg seg--wheelSeg11 wText">
-				<h2>11<br>8<br>0<br>0</h2>
+				<h2>$<br>6<br>0<br>0</h2>
 			</div>
 			<div id="s12" class="seg seg--wheelSeg12 wText">
-				<h2>12<br>8<br>0<br>0</h2>
+				<h2>$<br>9<br>5<br>0</h2>
 			</div>
 			<div id="s13" class="seg seg--wheelSeg13 wText">
 				<p>B<br>a<br>n<br>k<br>r<br>u<br>p<br>t</p>
 			</div>
 			<div id="s14" class="seg seg--wheelSeg14 wText">
-				<h2>14<br>8<br>0<br>0</h2>
+				<h2>$<br>3<br>0<br>0</h2>
 			</div>
 			<div id="s15" class="seg seg--wheelSeg15 wText">
-				<h2>15<br>8<br>0<br>0</h2>
+				<h2>$<br>2<br>5<br>0<br>0</h2>
 			</div>
 			<div id="s16" class="seg seg--wheelSeg16 wText">
-				<h2>16<br>8<br>0<br>0</h2>
+				<h2>$<br>3<br>5<br>0</h2>
 			</div>
 			<div id="s17" class="seg seg--wheelSeg17 wText">
-				<h2>17<br>8<br>0<br>0</h2>
+				<p>L<br>o<br>s<br>e<br>T<br>u<br>r<br>n</p>
 			</div>
 			<div id="s18" class="seg seg--wheelSeg18 wText">
-				<h2>18<br>8<br>0<br>0</h2>
+				<h2>$<br>9<br>0<br>0</h2>
 			</div>
 			<div id="s19" class="seg seg--wheelSeg19 wText">
-				<h2>19<br>8<br>0<br>0</h2>
+				<h2>$<br>6<br>0<br>0</h2>
 			</div>
 			<div id="s20" class="seg seg--wheelSeg20 wText">
-				<h2>20<br>8<br>0<br>0</h2>
+				<h2>$<br>9<br>0<br>0</h2>
 			</div>
 			<div id="s21" class="seg seg--wheelSeg21 wText">
-				<h2>21<br>8<br>0<br>0</h2>
+				<h2>$<br>6<br>5<br>0</h2>
 			</div>
 			<div id="s22" class="seg seg--wheelSeg22 wText">
-				<h2>22<br>8<br>0<br>0</h2>
+				<h2>$<br>8<br>0<br>0</h2>
 			</div>
 			<div id="s23" class="seg seg--wheelSeg23 wText">
-				<h2>7<br>0<br>0</h2>
+				<h2>$<br>7<br>0<br>0</h2>
 			</div>
 			<div id="s24" class="seg seg--wheelSeg24 wText">
-				<h2>6<br>5<br>0</h2>
+				<h2>$<br>6<br>5<br>0</h2>
 			</div>
 			
 			<div class="center">
