Added mush content and calculations in the way of the actual game phrase box. Will use less.js to render the content I think.

--- a/index.html
+++ b/index.html
@@ -98,64 +98,59 @@
 			</div>
 		</div>
 	</div>
-	<div class="letterBoxContainer">
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-	</div>
+	<ul class="letterBoxContainer">
+		<div class="blankBox corner"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox "></div>
+		
+		<div class="blankBox corner"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+
+		<div class="words words--joining">JOINING</div>
+		<div class="blankBox"></div>
+		<div class="words words--a">A</div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="words words--book">BOOK</div>
+		<div class="blankBox"></div>
+		<div class="words words--club">CLUB</div>
+		
+		
+		
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox corner"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox "></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox corner"></div>
+		
+		
+	</ul>
 	<script type="text/javascript" src="scripts2.js"></script>
 
 
