--- a/index.html
+++ b/index.html
@@ -112,28 +112,24 @@
 		<div class="blankBox"></div>
 		<div class="blankBox"></div>
 		<div class="blankBox "></div>
-		
 		<div class="blankBox corner"></div>
+		
 		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-
-		<div class="words words--joining">JOINING</div>
-		<div class="blankBox"></div>
+		
 		<div class="words words--a">A</div>
 		<div class="blankBox"></div>
+		<div class="words words--package">PACKAGE</div>
+		<div class="blankBox"></div>
+		<div class="words words--in">IN</div>
 		<div class="blankBox"></div>
 		<div class="blankBox"></div>
+		<div class="words words--your">YOUR</div>
 		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="words words--book">BOOK</div>
-		<div class="blankBox"></div>
-		<div class="words words--club">CLUB</div>
+		<div class="words words--mailbox">MAILBOX</div>
 		
 		
+		<div class="blankBox"></div>
 		
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
 		<div class="blankBox corner"></div>
 		<div class="blankBox"></div>
 		<div class="blankBox"></div>
