Finished algorithm for creating 5 sets of game rounds from the original array of game values.

--- a/index.html
+++ b/index.html
@@ -115,20 +115,24 @@
 		<div class="blankBox corner"></div>
 		
 		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
 		
-		<div class="words words--a">A</div>
-		<div class="blankBox"></div>
-		<div class="words words--package">PACKAGE</div>
-		<div class="blankBox"></div>
-		<div class="words words--in">IN</div>
+		<div class="words words--a">Popular</div>
 		<div class="blankBox"></div>
 		<div class="blankBox"></div>
-		<div class="words words--your">YOUR</div>
 		<div class="blankBox"></div>
-		<div class="words words--mailbox">MAILBOX</div>
-		
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="words words--package">Opinion</div>
 		
 		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		<div class="blankBox"></div>
+		
 		
 		<div class="blankBox corner"></div>
 		<div class="blankBox"></div>
