Fixed the bugs in the games constructor and prepared the index and styles files for the game constructor script.

--- a/index.html
+++ b/index.html
@@ -99,60 +99,43 @@
 		</div>
 	</div>
 	<ul class="letterBoxContainer">
-		<div class="blankBox corner"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox "></div>
-		<div class="blankBox corner"></div>
+		<div class="blankBox corner beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox beginning"></div>
+		<div class="blankBox corner beginning"></div>
 		
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		
-		<div class="words words--a">Popular</div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="words words--package">Opinion</div>
-		
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
+		<div id="gameBoard"></div>
 		
 		
-		<div class="blankBox corner"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox "></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox"></div>
-		<div class="blankBox corner"></div>
+		<div class="blankBox corner end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox end"></div>
+		<div class="blankBox corner end"></div>
 		
 		
 	</ul>
 	<script type="text/javascript" src="scripts2.js"></script>
-
+	<script type="text/javascript" src="Gameboard.js"></script>
 
 </body>
 </html>
