GameBoardBuilder is almost ready. Still justifying the output with styles, but I think there is a built in style element that is thwarting my efforts.

--- a/index.html
+++ b/index.html
@@ -99,43 +99,44 @@
 		</div>
 	</div>
 	<ul class="letterBoxContainer">
-		<div class="blankBox corner beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox beginning"></div>
-		<div class="blankBox corner beginning"></div>
+		<div class="corner beginning"></div>
+		<div class="beginning"></div>
+		<div class="beginning"></div>
+		<div class="beginning"></div>
+		<div class="beginning"></div>
+		<div class="beginning"></div>
+		<div class="beginning"></div>
+		<div class="beginning"></div>
+		<div class="beginning"></div>
+		<div class="beginning"></div>
+		<div class="beginning"></div>
+		<div class="beginning"></div>
+		<div class="beginning"></div>
+		<div class="corner beginning"></div>
 		
 		<div id="gameBoard"></div>
 		
 		
-		<div class="blankBox corner end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox end"></div>
-		<div class="blankBox corner end"></div>
+		<div class=" corner end"></div>
+		<div class=" end"></div>
+		<div class=" end"></div>
+		<div class=" end"></div>
+		<div class=" end"></div>
+		<div class=" end"></div>
+		<div class=" end"></div>
+		<div class=" end"></div>
+		<div class=" end"></div>
+		<div class=" end"></div>
+		<div class=" end"></div>
+		<div class=" end"></div>
+		<div class=" end"></div>
+		<div class=" corner end"></div>
 		
 		
 	</ul>
 	<script type="text/javascript" src="scripts2.js"></script>
 	<script type="text/javascript" src="Gameboard.js"></script>
+	<script type="text/javascript" src="buildgameboard.js"></script>
 
 </body>
 </html>
