--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html5>
 <html>
 <head>
-	<title></title>
+	<title>Lucky Wheel</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.3/js.cookie.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="wordGrid.css">
 	<style id="kfr" type="text/css">
@@ -135,12 +137,12 @@
 		
 		
 	</ul>
-	<button"b1">A</button><button"b2">B</button><button"b3">C</button><button"b4">D</button><button"b5">E</button>
-	<button id="b6">F</button><button id="b7">G</button><button id="b8">H</button><button id="b9">I</button><button id="b1">J</button>
-	<button id="b10">K</button><button id="b11">L</button><button id="b12">M</button><button id="b13">N</button><button id="b4">O</button>
-	<button id="b15">P</button><button id="b16">Q</button><button id="b17">R</button><button id="b18">S</button><button id="b1">T</button>
-	<button id="b19">U</button><button id="b20">V</button><button id="b21">W</button><button id="b22">X</button><button id="b23">Y</button>
-	<buttonid="b24">Z</button>
+	<button type="button" class="btn btn-default" id="b0"></button><button type="button"  class="btn btn-primary" id="b1">A</button><button type="button"  class="btn btn-primary" id="b2">B</button><button type="button"  class="btn btn-primary" id="b3">C</button><button type="button"  class="btn btn-primary" id="b4">D</button><button type="button"  class="btn btn-primary" id="b5">E</button>
+	<button type="button"  class="btn btn-primary" id="b6">F</button><button type="button"  class="btn btn-primary" id="b7">G</button><button type="button"  class="btn btn-primary" id="b8">H</button><button type="button"  class="btn btn-primary" id="b9">I</button><button type="button"  class="btn btn-primary" id="b1">J</button>
+	<button type="button"  class="btn btn-primary" id="b10">K</button><button type="button"  class="btn btn-primary" id="b11">L</button><button type="button"  class="btn btn-primary" id="b12">M</button><button type="button"  class="btn btn-primary" id="b13">N</button><button type="button"  class="btn btn-primary" id="b14">O</button>
+	<button type="button"  class="btn btn-primary" id="b15">P</button><button type="button"  class="btn btn-primary" id="b16">Q</button><button type="button"  class="btn btn-primary" id="b17">R</button><button type="button"  class="btn btn-primary" id="b18">S</button><button type="button"  class="btn btn-primary" id="b19">T</button>
+	<button type="button"  class="btn btn-primary" id="b19">U</button><button type="button"  class="btn btn-primary" id="b20">V</button><button type="button"  class="btn btn-primary" id="b21">W</button><button type="button"  class="btn btn-primary" id="b22">X</button><button type="button"  class="btn btn-primary" id="b23">Y</button>
+	<button type="button"  class="btn btn-primary" id="b24">Z</button>
 	<script type="text/javascript" src="scripts2.js"></script>
 	<script type="text/javascript" src="Gameboard.js"></script>
 	<script type="text/javascript" src="buildgameboard.js"></script>
