Finished solve puzzle/new round bug.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div id="mainBody">
 		<div id="player1totalc">
 			<div>
-				<p>Player 1</p><p id="player1final"></p>
+				<p id="player1final">Player 1</p>
 			</div>
 			<div id="player1total">
 				<h1>$0</h1>
@@ -25,7 +25,7 @@
 		</div>
 		<div id="player2totalc">
 			<div>
-				<p>Player 2</p><p id="player2final"></p>
+				<p id="player2final">Player 2</p>
 			</div>
 			<div id="player2total">
 				<h1 >$0</h1>
@@ -172,7 +172,7 @@
 	<div class="puzzleSolve" id="puzzleSolve">
 		<form>
 			<label for="solve">Solve the Puzzle!</label>
-			<input type="text" name="solve" id="solve"> | <button type="button" id="solve">Solve</button>
+			<input type="text" name="solve" id="solveIt"> | <button type="button" id="solve">Solve</button>
 		</form>
 	</div>
 	<script type="text/javascript" src="scripts2.js"></script>
