Fixed type to correctly load resource.

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 	<script type="text/javascript" src="scripts2.js"></script>
 	<script type="text/javascript" src="Gameboard.js"></script>
 	<script type="text/javascript" src="buildgameboard.js"></script>
-	<script type="text/javascript" src="gamePlay.js"></script>
+	<script type="text/javascript" src="gameplay.js"></script>
 
 </body>
 </html>
